Adding Hear cart and api product add and update api update and modal added in frontend
